<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">居民健康档案</string>
    <string name="properties">SlidingMenu Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="about_msg">&lt;b>SlidingMenu&lt;/b> is an Open Source Android library 
        that allows developers to easily create applications with sliding menus like those 
        made popular in the Google+, YouTube, and Facebook applications. 
        You can find it on GitHub by clicking the little octocat icon in the ActionBar. 
        Feel free to use it all you want in your Android apps provided 
        that you cite this project and include the license in your app.
        &lt;br>&lt;br>
		SlidingMenu is currently used in some incredibly popular Android 
		apps such as Zappos, Plume, VLC for Android, and The Verge. 
		If you are using SlidingMenu in your app and would like to be 
		listed here, please let me know via Twitter (@slidingmenu)!</string>
    <string name="apache_license">&lt;b>SlidingMenu &lt;/b>&lt;br>
        \u00A9 2012 Jeremy Feinstein&lt;br>
        SlidingMenu is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>ActionBarSherlock &lt;/b>&lt;br>
        \u00A9 2012 Jake Wharton&lt;br>
        ActionBarSherlock is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
		&lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
		You may obtain a copy of the License at&lt;br>
		&lt;center>&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>
				"http://www.apache.org/licenses/LICENSE-2.0&lt;/a>&lt;/center>&lt;br>
		Unless required by applicable law or agreed to in writing, 
		software distributed under the License is distributed on an 
		\'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
		either express or implied. See the License for the specific 
		language governing permissions and limitations under the License.</string>
    <string name="no_email">Sorry, I couldn\'t find any e-mail apps on your phone</string>

    <string name="myrecord">我的健康档案</string>
    <string name="medication_reminder">用药提醒</string>
    <string name="flowup_reminder">随访预约提醒</string>
    <string name="health_knowledge">健康知识宣传</string>
    <string name="view_announcement">查看公告</string>
    <string name="health_education">健康教育活动</string>
    <string name="last_sync">上次同步: 2013.6.15 15:33</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="hometown">籍贯：</string>
    <string name="nation">民族：</string>
    <string name="blood_type">血型：</string>
    <string name="marriage_status">婚姻状态：</string>
    <string name="mobileNo">联系方式：</string>
    <string name="edcuation">文化程度：</string>
    <string name="permanent_type">常住类型：</string>
    <string name="current_address">现住址：</string>
    <string name="working_units">工作单位：</string>
    <string name="working_contact_name">职位联系人姓名：</string>
    <string name="working_contact_tel">职位联系人电话：</string>
    <string name="payment_type">付费类型：</string>
    <string name="socialNO">社保号：</string>
    <string name="medicalNO">医保号：</string>
    <string name="familycode">家庭编号：</string>
    <string name="relationship">与户主关系：</string>
    <string name="responsibility_userID">责任医生：</string>
    <string name="filing_units">建档单位：</string>
    <string name="filing_userID">建档人：</string>
    <string name="publish_time">发布时间：</string>
    <string name="publish_by">发布机构：</string>
    <string name="announcement_detail">公告详情</string>
    <string name="education_detail">健康教育活动详情</string>
    <string name="A_DateTime">时间：</string>
    <string name="A_Location">地点：</string>
    <string name="A_Object">对象：</string>
    <string name="A_Crowd">人群：</string>
    <string name="A_Form">形式：</string>
    <string name="A_Organizers">主办单位：</string>
    <string name="A_Duration">持续时间：</string>
    <string name="A_Missionary">宣教人：</string>
     <string name="A_Partners">合作伙伴：</string>
    <string name="A_Number">参与人数：</string>
    
    <!-- clock start -->
	<string name="app_label">提醒new</string>
    <string name="alarm_list_title" >提醒</string>
    <string name="add_alarm">添加提醒</string>
    <string name="menu_desk_clock">座钟</string>
    <string name="menu_edit_alarm" >修改提醒设置</string>
    <string name="delete_alarm" >取消提醒</string>
    <string name="enable_alarm" >启用提醒</string>
    <string name="disable_alarm">停用提醒</string>
    <string name="delete_alarm_confirm" >将会取消此提醒。</string>
    <string name="show_clock" >显示时钟</string>
    <string name="hide_clock" >隐藏时钟</string>
    <string name="label" >提示语</string>
    <string name="default_label">提醒</string>
    <string name="set_alarm" >设置提醒</string>
    <string name="alarm_vibrate" >振动</string>
    <string name="alarm_repeat" >重复</string>
    <string name="alert" >提示音</string>
    <string name="time" >时间</string>
    <string name="alarm_alert_dismiss_text">取消</string>
    <string name="alarm_alert_alert_silenced">提醒响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟</string>
    <string name="alarm_alert_snooze_text">暂停再响</string>
    <string name="alarm_alert_snooze_set">暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。</string>
  	<string-array name="alarm_set">
    <item>已将此提醒设置为从现在起不到 1 分钟后提醒。</item>
    <item>已将此提醒设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。</item>
    <item>已将此提醒设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。</item>
    <item>已将此提醒设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。</item>
    <item>已将此提醒设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。</item>
    <item>已将此提醒设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。</item>
    <item>已将此提醒设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。</item>
    <item>已将该提醒设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。</item>
  </string-array>
    <string name="day" >1 天</string>
    <string name="days" ><xliff:g id="DAYS">%s</xliff:g> 天</string>
    <string name="hour" >1 小时</string>
    <string name="hours" ><xliff:g id="HOURS">%s</xliff:g> 小时</string>
    <string name="minute" >1 分钟</string>
    <string name="minutes" ><xliff:g id="MINUTES">%s</xliff:g> 分钟</string>
    <string name="every_day" >每天</string>
    <string name="never" >一律不</string>
    <string name="day_concat">, </string>
    <string name="clock_instructions">选择要显示的时钟。</string>
    <string name="analog_gadget" >模拟时钟</string>
    <string name="settings">设置</string>
    <string name="alarm_in_silent_mode_title" >静音模式下提醒响</string>
    <string name="alarm_in_silent_mode_summary" >手机处于静音模式时，提醒仍会响</string>
    <string name="snooze_duration_title">再响间隔</string>
  <string-array name="snooze_duration_entries">
    <item>5 分钟</item>
    <item>10 分钟</item>
    <item>15 分钟</item>
    <item>20 分钟</item>
    <item>25 分钟</item>
    <item>30 分钟</item>
  </string-array>
  <string-array name="snooze_duration_values">
    <item>5</item>
    <item>10</item>
    <item>15</item>
    <item>20</item>
    <item>25</item>
    <item>30</item>
  </string-array>
    <string name="done" >完成</string>
    <string name="revert" >还原</string>
    <string name="delete" >删除</string>
    <string name="delete_clock" >删除提醒</string>
    <string name="alarm_volume_title">提醒音量</string>
    <string name="alarm_volume_summary" >设置提醒音量</string>
    <string name="silent_alarm_summary">静音</string>
    <string name="alarm_notify_text">选择暂停或关闭此提醒。</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="LABEL">%s</xliff:g>（已暂停）</string>
    <string name="alarm_notify_snooze_text">已将提醒设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。</string>
    <string name="volume_button_setting_title">音量和相机</string>
    <string name="volume_button_dialog_title">按钮的作用</string>
    <string name="volume_button_setting_summary">设置这些按钮在提醒响起时的作用</string>
  <string-array name="volume_button_setting_entries">
    <item>无</item>
    <item>暂停</item>
    <item>关闭</item>
  </string-array>
  <string-array name="volume_button_setting_values">
    <item>0</item>
    <item>1</item>
    <item>2</item>
  </string-array>
    <string name="alarm_button_description" >提醒</string>
    <string name="gallery_button_description" >图库</string>
    <string name="music_button_description">音乐</string>
    <string name="nightmode_button_description" >调暗</string>
    <string name="home_button_description" >启动器</string>
    <string name="desk_clock_button_description" >时钟显示</string>
    <string name="battery_charging_level" ><xliff:g id="NUMBER">%d</xliff:g><xliff:g id="PERCENT">%%</xliff:g></string>
    <string name="weather_fetch_failure" >目前无法提供天气信息。</string>
    <string name="menu_item_dock_settings">底座设置</string>
    <!-- 新增 -->
    <string name="times">次数</string>
    <string name="interval">间隔</string>
    <string name="notification_default_summary">默认提示音</string>
    <string-array name="choose_bell">
        <item>静音</item>
		<item>系统提示音</item>
	</string-array>
	<!-- clcok end -->
	<string name="medicine_notice_title">基层健康档案 用药提醒</string>
	<string name="medicine_notice_body">用药时间到！</string>
</resources>