<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/bg_myrecord">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp"
	    android:layout_centerInParent="true"
	    android:orientation="vertical">
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:text="@string/app_name"
	        android:textSize="24sp"
	        android:textColor="@android:color/white"
	        android:gravity="right"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/login_form"
	        android:orientation="vertical">
	        <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:hint="@string/username"
		        android:textSize="14sp"
		        android:textColor="@color/light_gray"
		        android:gravity="center_vertical"/>
	        <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:hint="@string/password"
		        android:textSize="14sp"
		        android:textColor="@color/light_gray"
		        android:gravity="center_vertical"/>
	    </LinearLayout>
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp">
	        <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/forget_password"
		        android:textSize="12sp"
		        android:textColor="@android:color/white"
		        android:gravity="center_vertical"
		        android:layout_alignParentLeft="true"
		        android:paddingRight="15dp"/>
	        <ImageButton 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/login"
	            android:layout_alignParentRight="true"
	            android:background="@android:color/transparent"/>
	    </RelativeLayout>
	</LinearLayout>
</RelativeLayout>