<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include 
         android:id="@+id/headLayout"
         layout="@layout/common_head"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:layout_below="@id/headLayout"
	    android:orientation="vertical">
	    <TextView 
		    android:id="@+id/A_Theme"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:textSize="22sp"
		    android:gravity="center"
		    android:layout_marginBottom="5dp"
		    android:textColor="@color/light_green"/>
		<ScrollView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp">
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_DateTime"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_DateTime"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
		        <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Location"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Location"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Object"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Object"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Crowd"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Crowd"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Form"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Form"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Organizers"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Organizers"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Duration"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Duration"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Missionary"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Missionary"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Partners"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Partners"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="35dp"
			        android:layout_marginTop="5dp"
			        android:layout_marginBottom="5dp">
			        <TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="match_parent"
					    android:text="@string/A_Number"
					    android:gravity="center_vertical"
					    android:textSize="16sp"/>
			        <TextView 
			            android:id="@+id/A_Number"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:background="@color/light_gray"
					    android:gravity="center_vertical"
					    android:paddingLeft="3dp"
					    android:textSize="16sp"/>
			    </LinearLayout>
		    </LinearLayout>
		</ScrollView>
	</LinearLayout>
</RelativeLayout>