<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:background="@color/bg_menu"
	    android:orientation="vertical">
	    	<LinearLayout 
	    	    android:layout_width="match_parent"
	    	    android:layout_height="60dp"
	    	    android:layout_margin="20dp">
	    	    <ImageView 
	    	        android:layout_width="60dp"
	    	        android:layout_height="match_parent"
	    	        android:background="@android:color/white"/>
	    	    <LinearLayout 
	    	        android:id="@+id/user_info"
	    	        android:clickable="true"
	    	        android:layout_width="match_parent"
	    	        android:layout_height="match_parent"
	    	        android:layout_marginLeft="10dp"
	    	        android:orientation="vertical">
	    	        <TextView 
	    	            android:id="@+id/username"
	    	            android:layout_width="match_parent"
	    	            android:layout_height="30dp"
	    	            android:gravity="center_vertical"
	    	            android:text="苏小妹"
	    	            android:textColor="@android:color/black"/>
	    	        <TextView 
	    	            android:id="@+id/idcard"
	    	            android:layout_width="match_parent"
	    	            android:layout_height="30dp"
	    	            android:gravity="center_vertical"
	    	            android:text="440923199006254112"
	    	            android:textColor="@android:color/black"/>
	    	    </LinearLayout>
	    	</LinearLayout>
	    	<LinearLayout 
	    	    android:layout_width="match_parent"
	    	    android:layout_height="match_parent"
	    	    android:orientation="vertical">
	    	    <LinearLayout 
	    	        android:layout_width="wrap_content"
	    	        android:layout_height="50dp"
	    	        android:layout_marginTop="20dp"
	    	        android:background="@color/bg_myrecord">
	    	        <ImageButton 
	    	            android:layout_width="50dp"
	    	            android:layout_height="match_parent"
	    	            android:src="@drawable/arrow_right"
	    	            android:background="@android:color/transparent"/>
	    	        <View 
	    	            android:layout_width="1dp"
	    	            android:layout_height="match_parent"
	    	            android:background="@android:color/white"/>
	    	        <TextView android:layout_width="wrap_content"
	    	            android:layout_height="match_parent"
	    	            android:textColor="@android:color/white"
	    	            android:gravity="center_vertical"
	    	            android:paddingLeft="10dp"
	    	            android:paddingRight="20dp"
	    	            android:textSize="20sp"
	    	            android:text="@string/myrecord"/>
	    	    </LinearLayout>
	    	    <LinearLayout 
	    	        android:layout_width="wrap_content"
	    	        android:layout_height="50dp"
	    	        android:layout_marginTop="20dp"
	    	        android:background="@color/bg_medication_reminder">
	    	        <ImageButton 
	    	            android:layout_width="50dp"
	    	            android:layout_height="match_parent"
	    	            android:src="@drawable/arrow_down"
	    	            android:background="@android:color/transparent"/>
	    	        <View 
	    	            android:layout_width="1dp"
	    	            android:layout_height="match_parent"
	    	            android:background="@android:color/white"/>
	    	        <TextView android:layout_width="wrap_content"
	    	            android:layout_height="match_parent"
	    	            android:textColor="@android:color/white"
	    	            android:gravity="center_vertical"
	    	            android:paddingLeft="10dp"
	    	            android:paddingRight="20dp"
	    	            android:textSize="20sp"
	    	            android:text="@string/medication_reminder"/>
	    	    </LinearLayout>
	    	    <LinearLayout 
	    	        android:layout_width="wrap_content"
	    	        android:layout_height="50dp"
	    	        android:layout_marginTop="20dp"
	    	        android:background="@color/bg_flowup_reminder">
	    	        <ImageButton 
	    	            android:layout_width="50dp"
	    	            android:layout_height="match_parent"
	    	            android:src="@drawable/arrow_down"
	    	            android:background="@android:color/transparent"/>
	    	        <View 
	    	            android:layout_width="1dp"
	    	            android:layout_height="match_parent"
	    	            android:background="@android:color/white"/>
	    	        <TextView android:layout_width="wrap_content"
	    	            android:layout_height="match_parent"
	    	            android:textColor="@android:color/white"
	    	            android:gravity="center_vertical"
	    	            android:paddingLeft="10dp"
	    	            android:paddingRight="20dp"
	    	            android:textSize="20sp"
	    	            android:text="@string/flowup_reminder"/>
	    	    </LinearLayout>
	    	    <LinearLayout 
	    	        android:layout_width="wrap_content"
	    	        android:layout_height="50dp"
	    	        android:layout_marginTop="20dp"
	    	        android:background="@color/bg_health_knowledge">
	    	        <ImageButton 
	    	            android:layout_width="50dp"
	    	            android:layout_height="match_parent"
	    	            android:src="@drawable/arrow_down"
	    	            android:background="@android:color/transparent"/>
	    	        <View 
	    	            android:layout_width="1dp"
	    	            android:layout_height="match_parent"
	    	            android:background="@android:color/white"/>
	    	        <TextView android:layout_width="wrap_content"
	    	            android:layout_height="match_parent"
	    	            android:textColor="@android:color/white"
	    	            android:gravity="center_vertical"
	    	            android:paddingLeft="10dp"
	    	            android:paddingRight="20dp"
	    	            android:textSize="20sp"
	    	            android:text="@string/health_knowledge"/>
	    	    </LinearLayout>
	    	    <LinearLayout 
	    	        android:layout_width="wrap_content"
	    	        android:layout_height="50dp"
	    	        android:layout_marginTop="20dp"
	    	        android:background="@color/bg_view_announcement">
	    	        <ImageButton 
	    	            android:layout_width="50dp"
	    	            android:layout_height="match_parent"
	    	            android:src="@drawable/arrow_down"
	    	            android:background="@android:color/transparent"/>
	    	        <View 
	    	            android:layout_width="1dp"
	    	            android:layout_height="match_parent"
	    	            android:background="@android:color/white"/>
	    	        <TextView android:layout_width="wrap_content"
	    	            android:layout_height="match_parent"
	    	            android:textColor="@android:color/white"
	    	            android:gravity="center_vertical"
	    	            android:paddingLeft="10dp"
	    	            android:paddingRight="20dp"
	    	            android:textSize="20sp"
	    	            android:text="@string/view_announcement"/>
	    	    </LinearLayout>
	    	    <LinearLayout 
	    	        android:layout_width="wrap_content"
	    	        android:layout_height="50dp"
	    	        android:layout_marginTop="20dp"
	    	        android:background="@color/bg_view_health_education">
	    	        <ImageButton 
	    	            android:layout_width="50dp"
	    	            android:layout_height="match_parent"
	    	            android:src="@drawable/arrow_down"
	    	            android:background="@android:color/transparent"/>
	    	        <View 
	    	            android:layout_width="1dp"
	    	            android:layout_height="match_parent"
	    	            android:background="@android:color/white"/>
	    	        <TextView android:layout_width="wrap_content"
	    	            android:layout_height="match_parent"
	    	            android:textColor="@android:color/white"
	    	            android:gravity="center_vertical"
	    	            android:paddingLeft="10dp"
	    	            android:paddingRight="20dp"
	    	            android:textSize="20sp"
	    	            android:text="@string/view_health_education"/>
	    	    </LinearLayout>
	    	</LinearLayout>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_alignParentBottom="true"
	        android:background="@color/black_transparent">
	        <ImageView 
	            android:layout_width="40dp"
	            android:padding="3dp"
	            android:layout_height="match_parent"
	            android:src="@drawable/sync"/>
	        <TextView android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:gravity="center_vertical"
	            android:textColor="@android:color/white"
	            android:text="@string/last_sync"/>
	    </LinearLayout>
   </RelativeLayout>